--- a/saie/application.properties
+++ b/saie/application.properties
@@ -1,5 +1,5 @@
 #Grails Metadata file
-#Wed Nov 16 12:48:17 ART 2011
+#Tue Nov 29 16:05:49 ART 2011
 app.grails.version=1.3.5
 app.name=saie
 app.servlet.version=2.4
@@ -14,4 +14,5 @@ plugins.log4j-xml=0.2
 plugins.mail=1.0-SNAPSHOT
 plugins.spring-security-core=1.2.4
 plugins.spring-security-ui=0.1.2
+plugins.super-file-upload=0.4
 plugins.tomcat=1.3.5
