--- a/saie/.project
+++ b/saie/.project
@@ -104,29 +104,29 @@
 			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/jasper-1.2.2/src/groovy</locationURI>
 		</link>
 		<link>
-			<name>jquery-1.6.1.1-grails-app-conf</name>
+			<name>jquery-1.7.1-grails-app-conf</name>
 			<type>2</type>
-			<location>C:/Users/Andrea/.grails/1.3.5/projects/saie/plugins/jquery-1.6.1.1/grails-app/conf</location>
+			<location>C:/Users/Andrea/.grails/1.3.5/projects/saie/plugins/jquery-1.7.1/grails-app/conf</location>
 		</link>
 		<link>
-			<name>jquery-1.6.1.1-grails-app-i18n</name>
+			<name>jquery-1.7.1-grails-app-i18n</name>
 			<type>2</type>
-			<location>C:/Users/Andrea/.grails/1.3.5/projects/saie/plugins/jquery-1.6.1.1/grails-app/i18n</location>
+			<location>C:/Users/Andrea/.grails/1.3.5/projects/saie/plugins/jquery-1.7.1/grails-app/i18n</location>
 		</link>
 		<link>
-			<name>jquery-1.6.1.1-grails-app-services</name>
+			<name>jquery-1.7.1-grails-app-services</name>
 			<type>2</type>
-			<location>C:/Users/Andrea/.grails/1.3.5/projects/saie/plugins/jquery-1.6.1.1/grails-app/services</location>
+			<location>C:/Users/Andrea/.grails/1.3.5/projects/saie/plugins/jquery-1.7.1/grails-app/services</location>
 		</link>
 		<link>
-			<name>jquery-1.6.1.1-grails-app-taglib</name>
+			<name>jquery-1.7.1-grails-app-taglib</name>
 			<type>2</type>
-			<location>C:/Users/Andrea/.grails/1.3.5/projects/saie/plugins/jquery-1.6.1.1/grails-app/taglib</location>
+			<location>C:/Users/Andrea/.grails/1.3.5/projects/saie/plugins/jquery-1.7.1/grails-app/taglib</location>
 		</link>
 		<link>
-			<name>jquery-1.6.1.1-src-groovy</name>
+			<name>jquery-1.7.1-src-groovy</name>
 			<type>2</type>
-			<location>C:/Users/Andrea/.grails/1.3.5/projects/saie/plugins/jquery-1.6.1.1/src/groovy</location>
+			<location>C:/Users/Andrea/.grails/1.3.5/projects/saie/plugins/jquery-1.7.1/src/groovy</location>
 		</link>
 		<link>
 			<name>jquery-ui-1.8.15-grails-app-conf</name>
@@ -212,6 +212,16 @@
 			<name>recaptcha-0.5.2-src-groovy</name>
 			<type>2</type>
 			<location>C:/Users/Andrea/.grails/1.3.5/projects/saie/plugins/recaptcha-0.5.2/src/groovy</location>
+		</link>
+		<link>
+			<name>release-1.0.0.M2-src-groovy</name>
+			<type>2</type>
+			<location>C:/Users/Andrea/.grails/1.3.5/projects/saie/plugins/release-1.0.0.M2/src/groovy</location>
+		</link>
+		<link>
+			<name>release-1.0.0.M2-src-java</name>
+			<type>2</type>
+			<location>C:/Users/Andrea/.grails/1.3.5/projects/saie/plugins/release-1.0.0.M2/src/java</location>
 		</link>
 		<link>
 			<name>spring-security-core-1.2.4-grails-app-conf</name>
