--- a/saie/application.properties
+++ b/saie/application.properties
@@ -1,19 +1,19 @@
 #Grails Metadata file
-#Tue Feb 28 16:24:06 ART 2012
-app.grails.version=1.3.5
+#Mon Jun 04 17:02:01 ART 2012
+app.grails.version=1.3.9
 app.name=saie
 app.servlet.version=2.4
 app.version=0.1
 plugins.burning-image=0.5.0
 plugins.famfamfam=1.0.1
-plugins.hibernate=1.3.5
+plugins.hibernate=1.3.9
 plugins.jasper=1.5
 plugins.jquery=1.7.1
 plugins.jquery-ui=1.8.15
 plugins.log4j-xml=0.2
-plugins.mail=1.0-SNAPSHOT
+plugins.mail=1.0
 plugins.recaptcha=0.5.2
-plugins.spring-security-core=1.2.4
+plugins.spring-security-core=1.2.7.3
 plugins.spring-security-ui=0.1.2
 plugins.super-file-upload=0.4
-plugins.tomcat=1.3.5
+plugins.tomcat=1.3.9
