--- a/saie/.project
+++ b/saie/.project
@@ -24,6 +24,11 @@
 	</natures>
 	<linkedResources>
 		<link>
+			<name>.link_to_grails_plugins</name>
+			<type>2</type>
+			<locationURI>GRAILS_ROOT/1.3.9/projects/saie/plugins</locationURI>
+		</link>
+		<link>
 			<name>burning-image-0.5.0-grails-app-controllers</name>
 			<type>2</type>
 			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/burning-image-0.5.0/grails-app/controllers</locationURI>
